# cpplos

./: .gitmodules  CMakeLists.txt
game/: main.cpp
include/cpplos/: board.hpp  commands.hpp  common.hpp  game.hpp  net.hpp  rating.hpp  terminal.hpp
src/: board.cpp  commands.cpp  common.cpp  game.cpp  main.cpp  net.cpp  rating.cpp  terminal.ncurses.cpp
